--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                         <p>Переместите части в&nbsp;пунктирные области</p>
                     </div>
                     <div class="firstmodule_two_play">
-                        <div class="pic0_play1"></div>
-                        <div class="pic1_play1"></div>
-                        <div class="pic2_play1"></div>
-                        <div class="pic3_play1"></div>
-                        <div class="pic4_play1"></div>
-                        <div class="pic5_play1"></div>
-                        <div class="pic6_play1"></div>
-                        <div class="pic7_play1"></div>
+                        <div class="egg_pic pic0_play1"><img src="./img/egg/0.png" alt="Egg 0"></div>
+                        <div class="egg_pic pic1_play1"><img src="./img/egg/1.png" alt="Egg 1"></div>
+                        <div class="egg_pic pic2_play1"><img src="./img/egg/2.png" alt="Egg 2"></div>
+                        <div class="egg_pic pic3_play1"><img src="./img/egg/3.png" alt="Egg 3"></div>
+                        <div class="egg_pic pic4_play1"><img src="./img/egg/4.png" alt="Egg 4"></div>
+                        <div class="egg_pic pic5_play1"><img src="./img/egg/5.png" alt="Egg 5"></div>
+                        <div class="egg_pic pic6_play1"><img src="./img/egg/6.png" alt="Egg 6"></div>
+                        <div class="egg_pic pic7_play1"><img src="./img/egg/7.png" alt="Egg 7"></div>
                     </div>
                 </div>
             </section>
@@ -151,16 +151,16 @@
                 <!-- Четвертый блок вторая (нижняя) часть -->
                 <div class="fourthmodule_two">
                     <div class="fourthmodule_two_eggs">
+                        <div class="three_egg"><img class="thregg" src="./img/threeegg.jpg" alt="Три яйца"></div>
                         <!--<div class="card-container">
                             <div class="card" id="card1" onclick="selectCard(this);" style="background-image: url('./img/cards/card1.png');"></div>
                             <div class="card" id="card2" onclick="selectCard(this);" style="background-image: url('./img/cards/card2.png');"></div>
                             <div class="card" id="card3" onclick="selectCard(this);" style="background-image: url('./img/cards/card3.png');"></div>
-                        </div>
-                        -->
+                        </div> -->
                     </div>
                     <div class="fourthmodule_two_text">
                         <h1><span id="user-name-display">[Имя]</span>, поздравляем! Теперь вы знаете, как&nbsp;проходят миссии КОКО.</h1>
-                        <p>Примите подарок — яйцо от&nbsp;курочки с&nbsp;Марса.</p>
+                        <p>Примите подарок — яйца от&nbsp;курочек с&nbsp;Марса.</p>
                     </div>
                     <!-- КНОПКА НАЧАТЬ СНАЧАЛА -->
                     <div class="btn-container">
