--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                         </div>
                     </div>
                 </div>                
+                
                 <!-- Первый блок вторая (правая) часть -->
                 <div class="firstmodule_two">
                     <div class="firstmodule_two_text">
@@ -44,16 +45,17 @@
                         <p>Переместите части в&nbsp;пунктирные области</p>
                     </div>
                     <div class="firstmodule_two_play">
-                        <div class="egg_pic pic0_play1"><img src="./img/egg/0.png" alt="Egg 0"></div>
-                        <div class="egg_pic pic1_play1"><img src="./img/egg/1.png" alt="Egg 1"></div>
-                        <div class="egg_pic pic2_play1"><img src="./img/egg/2.png" alt="Egg 2"></div>
-                        <div class="egg_pic pic3_play1"><img src="./img/egg/3.png" alt="Egg 3"></div>
-                        <div class="egg_pic pic4_play1"><img src="./img/egg/4.png" alt="Egg 4"></div>
-                        <div class="egg_pic pic5_play1"><img src="./img/egg/5.png" alt="Egg 5"></div>
-                        <div class="egg_pic pic6_play1"><img src="./img/egg/6.png" alt="Egg 6"></div>
-                        <div class="egg_pic pic7_play1"><img src="./img/egg/7.png" alt="Egg 7"></div>
+                        <div class="egg_pic pic0_play1" style="left: 500px; top: 34px;"><img src="./img/egg/0.png" alt="Egg 0"></div>
+                        <div class="egg_pic pic1_play1" style="left: 207px; top: 154px;"><img src="./img/egg/1.png" alt="Egg 1"></div>
+                        <div class="egg_pic pic2_play1" style="left: 323px; top: 159px;"><img src="./img/egg/2.png" alt="Egg 2"></div>
+                        <div class="egg_pic pic3_play1" style="left: 24px; top: 142px;"><img src="./img/egg/3.png" alt="Egg 3"></div>
+                        <div class="egg_pic pic4_play1" style="left: 306px; top: 291px;"><img src="./img/egg/4.png" alt="Egg 4"></div>
+                        <div class="egg_pic pic5_play1" style="left: 542px; top: 60px;"><img src="./img/egg/5.png" alt="Egg 5"></div>
+                        <div class="egg_pic pic6_play1" style="left: 745px; top: 0;"><img src="./img/egg/6.png" alt="Egg 6"></div>
+                        <div class="egg_pic pic7_play1" style="left: 55px; top: 256px;"><img src="./img/egg/7.png" alt="Egg 7"></div>
                     </div>
                 </div>
+
             </section>
             <!-- Второй блок -->
             <section class="secondmodule">
